--- a/demo1.html
+++ b/demo1.html
@@ -11,7 +11,7 @@
         Hello people, is my 8th hello world, i would need professional help.
     </p>
     <article>
-        Is true, i'm just starting and i not know all things.
+        Is true, i'm just starting and i not know all things. follow me on twitch.tv/edwin!
     </article>
 </body>
 </html>
