--- a/demo1.html
+++ b/demo1.html
@@ -10,8 +10,9 @@
     <p>
         Hello people, is my 8th hello world, i would need professional help.
     </p>
+    <script src="demo2.js"></script>
     <article>
-        Is true, i'm just starting and i not know all things. follow me on twitch.tv/edwin!
+        Oh shit, here we go again.
     </article>
 </body>
 </html>
